--- a/styles/whyCion.css
+++ b/styles/whyCion.css
@@ -6,7 +6,7 @@
   height: 16.62rem;
   display: flex;
   flex-direction: column;
-  padding-top: 1.7358rem;
+  padding-top: 1.5909rem;
 }
 
 .why-cion__title {
@@ -33,8 +33,8 @@
 .why-cion__center {
   position: absolute;
   border-radius: 50%;
-  width: 8.811rem;
-  height: 8.811rem;
+  width: 7.181rem;
+  height: 7.181rem;
   background-color: #f6f6f6;
 }
 
@@ -76,21 +76,23 @@
   0% {
     width: 100%;
     height: 100%;
+    box-shadow: 0 1px 4px 0 var(--brandClr);
   }
   50% {
-    width: 105%;
-    height: 105%;
-    background-color: #eea3fc;
+    /* width: 105%;
+    height: 105%; */
+    box-shadow: 0 4px 16px 0 var(--brandClr);
   }
   100% {
     width: 100%;
     height: 100%;
+    box-shadow: 0 1px 4px 0 var(--brandClr);
   }
 }
 
 .why-cion__center-box {
-  width: 3.377rem;
-  height: 3.377rem;
+  width: 3.09rem;
+  height: 3.09rem;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -100,15 +102,15 @@
   position: absolute;
 }
 .why-cion__center-box img {
-  height: 2.264rem;
-  width: 2.264rem;
+  height: 1.727rem;
+  width: 1.727rem;
 }
 
 .why-cion__center-box p {
   position: absolute;
   bottom: -1.89rem;
   line-height: 0.7169rem;
-  font-size: 0.622rem;
+  font-size: 0.727rem;
   text-align: center;
   width: 6.528rem;
   color: var(--brandClr);
@@ -145,7 +147,7 @@ font-size: 5.66rem;
 top: 5rem;
 left: 50%;
 transform: translate(-50%, -50%); */
-  font-size: 5.6rem;
+  font-size: 4.5rem;
   line-height: 0.9;
 }
 
@@ -196,8 +198,8 @@ transform: translate(-50%, -50%); */
   }
 
   .why-cion__animation-box {
-    transition: 1s;
-    transition-timing-function: ease-in-out;
+    transition: .75s;
+    transition-timing-function: ease-out;
     width: 50%;
     height: 50%;
     position: relative;
@@ -236,22 +238,6 @@ transform: translate(-50%, -50%); */
     transform: translate(-50%, -50%);
   }
 
-  @keyframes blink {
-    0% {
-      width: 100%;
-      height: 100%;
-    }
-    50% {
-      width: 105%;
-      height: 105%;
-      background-color: #eea3fc;
-    }
-    100% {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
   .why-cion__center-box {
     width: 3.377rem;
     height: 3.377rem;
@@ -266,6 +252,7 @@ transform: translate(-50%, -50%); */
   .why-cion__center-box img {
     height: 2.264rem;
     width: 2.264rem;
+    border: 0;
   }
 
   .why-cion__center-box p {
